<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/menu_login"-->
<!--            android:icon="@drawable/ic_login"-->
<!--            android:title="@string/login" />-->
<!--        <item android:id="@+id/menu_search"-->
<!--            android:title="@string/search"-->
<!--            android:icon="@drawable/ic_search"-->
<!--            android:orderInCategory="100"-->
<!--            app:showAsAction="always"-->
<!--            app:actionViewClass="android.widget.SearchView" />-->
        <item
            android:id="@+id/menu_mine"
            android:icon="@drawable/ic_mine"
            android:title="@string/nav_mine" />

        <item android:title="其他">
            <menu>
                <group>
                    <item
                        android:id="@+id/menu_darkMode"
                        android:icon="@drawable/ic_darkmode"
                        android:title="@string/darkMode" />
                    <item
                        android:id="@+id/menu_timeClock"
                        android:icon="@drawable/ic_clock"
                        android:title="@string/Timing_Closure" />
                    <item
                        android:id="@+id/menu_share"
                        android:icon="@drawable/ic_share"
                        android:title="@string/share" />
                </group>
            </menu>
        </item>

        <item android:title=" ">
            <menu>
                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/logout"
                    />
            </menu>
        </item>
    </group>


</menu>