<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.alittlemusic.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_toplist"
        android:name="com.example.alittlemusic.ui.toplist.TopListFragment"
        android:label="@string/nav_toplist"
        tools:layout="@layout/fragment_toplist" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.alittlemusic.ui.mine.MineFragment"
        android:label="@string/nav_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>