<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/daily_songs_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="?attr/actionBarSize"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/menu_user_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/user_img"
        android:scaleType="centerCrop"
        app:riv_corner_radius="60dp"
        android:src="@drawable/user_avatar"
        app:riv_mutate_background="true" />

    <TextView
        android:id="@+id/menu_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fake_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:layout_marginTop="4dp"/>
</LinearLayout>