<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.playlist.PlayListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/playlist_head"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="250dp" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                android:paddingBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/list_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fitsSystemWindows="true"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/ic_back_white"
                    app:title="@string/playList"
                    app:titleTextColor="@color/white" />

                <!--                普通歌单模式-->
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/playlist_img"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="36dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test_2"
                    android:visibility="gone"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/list_toolbar"
                    app:riv_corner_radius="8dp" />

                <TextView
                    android:id="@+id/playlist_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/playlist_img"
                    app:layout_constraintTop_toBottomOf="@+id/list_toolbar" />

                <!--                排行榜模式-->
                <TextView
                    android:id="@+id/top_Playlist_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/playlist_img"
                    app:layout_constraintTop_toBottomOf="@+id/list_toolbar" />

                <TextView
                    android:id="@+id/top_playlist_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:drawableLeftCompat="@drawable/ic_music_white"
                    app:layout_constraintBottom_toTopOf="@+id/top_Playlist_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!--                每日推荐歌单模式-->
                <TextView
                    android:id="@+id/daily_playlist_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/daily_playlist_sub"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/daily_playlist_mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/daily_playlist_sub"
                    app:layout_constraintStart_toEndOf="@+id/daily_playlist_day" />

                <TextView
                    android:id="@+id/daily_playlist_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/daily_playlist_sub"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/collect_list_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/bg_edit_text"
                    android:button="@null"
                    android:checked="false"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/add_collect"
                    android:textColor="@drawable/collect_sel"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/playlist_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/play_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:padding="8.0dip"
                    android:text="@string/playAll"
                    android:textColor="@color/text_primary"
                    android:textSize="18.0sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_playon_fill"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

                <TextView
                    android:id="@+id/list_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="(0)"
                    android:textColor="@color/text_secondary" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/m_playList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/playlist_bar"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/playlist_fragment" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/plist_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="visible"
        android:layout_centerInParent="true" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>